+ add support jwt token as well

--- a/.env.template
+++ b/.env.template
@@ -38,6 +38,8 @@ APP_STORE_URL="https://play.${APP_DOMAIN}/store/apps/details?id=com.${COMPANY_NA
 
 APP_KEY=base64:your_app_key
 PASSWORD_HASH_COST=12
+SESSION_LIFETIME=3600
+APP_ALGORITHM=HS256
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
